<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFEF"
    tools:context=".Submit_Image_Found">

    <TextView
        android:id="@+id/rfo_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginStart="27dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/reportFoundObject"
        android:textColor="@color/blue"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/subheadline"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rfo_text">
    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="308dp"
        android:layout_height="227dp"
        android:background="@drawable/dropbox"
        android:foreground="@drawable/dropbox"
        android:backgroundTint="#EFEFEF"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/layoutguidelines"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text3">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppinsmedium"
            android:gravity="center"
            android:text="@string/opencam"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/openCamera"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/ContentDescription"/>

    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:id="@+id/layoutguidelines"
        app:layout_constraintTop_toBottomOf="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="27dp">

        <TextView
            android:id="@+id/guidelines"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guidelines"
            android:textStyle="bold"
            android:padding="2dp"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="11sp"/>

        <TextView
            android:id="@+id/g1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/g1"
            android:padding="2dp"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="9sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/g2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/g2"
            android:padding="2dp"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="9sp"
            tools:ignore="SmallSp"/>

        <TextView
            android:id="@+id/g3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/g3"
            android:padding="2dp"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="9sp"
            tools:ignore="SmallSp"/>

        <TextView
            android:id="@+id/g4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/g4"
            android:padding="2dp"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="9sp"
            tools:ignore="SmallSp"/>

        <TextView
            android:id="@+id/g5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/g5"
            android:padding="2dp"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="9sp"
            tools:ignore="SmallSp"/>

    </LinearLayout>

    <soup.neumorphism.NeumorphButton
        android:id="@+id/submitImage"
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:clickable="true"
        android:fontFamily="@font/poppinsmedium"
        android:gravity="center"
        android:text="@string/submitImage"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        tools:ignore="SmallSp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutguidelines"
        app:layout_constraintVertical_bias="0.165"
        app:neumorph_shadowColorDark="#dbdbdb"
        app:neumorph_shadowColorLight="#fdfdfd"
        app:neumorph_shapeAppearance="@style/neumorphCustom"
        app:neumorph_shapeType="flat"
        app:neumorph_strokeColor="@color/blue"
        app:neumorph_strokeWidth="1dp"
        app:neumorph_backgroundColor="@color/yellow"/>

    <soup.neumorphism.NeumorphButton
        android:id="@+id/skip"
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:clickable="true"
        android:fontFamily="@font/poppinsmedium"
        android:gravity="center"
        android:text="@string/skip"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        tools:ignore="SmallSp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitImage"
        app:layout_constraintVertical_bias="0.0"
        app:neumorph_shadowColorDark="#dbdbdb"
        app:neumorph_shadowColorLight="#fdfdfd"
        app:neumorph_shapeAppearance="@style/neumorphCustom"
        app:neumorph_shapeType="flat"
        app:neumorph_strokeColor="@color/yellow"
        app:neumorph_strokeWidth="1dp"
        app:neumorph_backgroundColor="@color/blue"
        android:layout_marginTop="-8dp"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>