<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:clipChildren="false"
    android:clipToPadding="false"
    tools:context=".Start_Found"
    >

    <ImageView
        android:id="@+id/box"
        android:layout_width="314dp"
        android:layout_height="336dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-40dp"
        android:rotation="10"
        android:src="@drawable/icon_box"
        android:contentDescription="@string/ContentDescription"/>

    <TextView
        android:id="@+id/rfo_text"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_below="@+id/box"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/reportFoundObject"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="30sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/rfo_descrip"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rfo_text"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/lost_description"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <soup.neumorphism.NeumorphButton
        android:id="@+id/start"
        android:layout_width="230dp"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/rfo_descrip"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppinsmedium"
        android:gravity="center"
        android:text="@string/start"
        android:clickable="true"
        android:textColor="@android:color/white"
        android:textSize="11sp"
        android:textStyle="bold"
        app:neumorph_inset="15dp"
        app:neumorph_shadowColorDark="#123461"
        app:neumorph_shadowColorLight="#164076"
        app:neumorph_shapeType="flat"
        app:neumorph_shadowElevation="9dp"
        app:neumorph_strokeColor="@color/yellow"
        app:neumorph_strokeWidth="1dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        android:clipChildren="false"
        android:clipToPadding="false"
        tools:context=".Start_Found">

        <ImageView
            android:id="@+id/boximage"
            android:layout_width="314dp"
            android:layout_height="336dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-40dp"
            android:contentDescription="@string/ContentDescription"
            android:rotation="10"
            android:src="@drawable/icon_box" />

        <TextView
            android:id="@+id/rfotext"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_below="@+id/boximage"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/reportFoundObject"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rfo"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rfotext"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/found_description"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <soup.neumorphism.NeumorphButton
            android:id="@+id/start_button"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="230dp"
            android:layout_height="75dp"
            android:layout_below="@+id/rfo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:fontFamily="@font/poppinsmedium"
            android:gravity="center"
            android:text="@string/start"
            android:textColor="@android:color/white"
            android:textSize="11sp"
            android:textStyle="bold"
            app:neumorph_inset="15dp"
            app:neumorph_shadowColorDark="#123461"
            app:neumorph_shadowColorLight="#164076"
            app:neumorph_shadowElevation="9dp"
            app:neumorph_shapeType="flat"
            app:neumorph_strokeColor="@color/yellow"
            app:neumorph_strokeWidth="1dp" />

    </RelativeLayout>

</RelativeLayout>