<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    tools:context=".HomeFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/RectangleView"
            style="@style/RectangleViewStyle"
            android:layout_width="370dp"
            android:layout_height="190dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="-41dp"
            android:background="@drawable/shape_rectangle_40">

            <View
                android:layout_width="230dp"
                android:layout_height="240dp"
                android:layout_marginStart="125dp"
                android:layout_marginTop="-15dp"
                android:alpha="0.2"
                android:background="@drawable/icon_box"
                android:rotation="10">
            </View>
        </FrameLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/RectangleView"
            android:layout_alignStart="@+id/RectangleView"
            android:layout_marginTop="30dp"
            android:layout_marginStart="25dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="0dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/button_selector_clicked"
                    android:text="G"
                    style="@style/ButtonStyle"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/button_selector_default"
                    android:text="M"
                    style="@style/ButtonStyle"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/button_selector_default"
                    android:text="2"
                    style="@style/ButtonStyle"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/button_selector_default"
                    android:text="3"
                    style="@style/ButtonStyle"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/button_selector_default"
                    android:text="4"
                    style="@style/ButtonStyle"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/button_selector_default"
                    android:text="R"
                    style="@style/ButtonStyle"/>

            </LinearLayout>
        </HorizontalScrollView>

        <View
            android:layout_width="51dp"
            android:layout_height="110dp"
            android:layout_alignTop="@+id/RectangleView"
            android:layout_alignStart="@+id/RectangleView"
            android:layout_marginTop="-4dp"
            android:layout_marginStart="-5dp"
            android:background="@drawable/block">
        </View>

        <RelativeLayout
            android:id="@+id/odd_shape"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="-35dp"
            android:layout_below="@id/RectangleView">

            <View
                android:id="@+id/view"
                android:layout_width="335dp"
                android:layout_height="340dp"
                android:background="@drawable/scan_container">
            </View>

            <ImageView
                android:id="@+id/losticon"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="-28dp"
                android:layout_marginTop="75dp"
                android:foregroundGravity="center_vertical"
                android:src="@drawable/icon_lost"
                android:contentDescription="@string/ContentDescription">

            </ImageView>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="132dp"
                android:layout_height="59dp"
                android:layout_below="@+id/textView"
                android:layout_alignEnd="@+id/view"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="34dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/ScanDescription"
                android:textAlignment="textEnd"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_alignEnd="@+id/view"
                android:layout_alignParentTop="true"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="34dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/FindMatch"
                android:textSize="21sp"
                android:textStyle="bold">
            </TextView>

            <soup.neumorphism.NeumorphButton
                android:id="@+id/scanbutton"
                android:layout_width="160dp"
                android:layout_height="70dp"
                android:layout_below="@+id/textView2"
                android:layout_alignEnd="@+id/view"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                app:neumorph_shapeType="flat"
                app:neumorph_backgroundColor="#F7B94A"
                app:neumorph_shadowColorDark="#A87E32"
                app:neumorph_shadowColorLight="#FFC967"
                app:neumorph_strokeColor="#F7B94A"
                style="@style/Widget.Neumorph.Button"
                app:neumorph_strokeWidth="1dp"
                android:drawableStart="@drawable/scan"
                android:drawablePadding="10dp"
                android:paddingHorizontal="25dp"
                android:text="@string/ScanNow"
                android:paddingVertical="27dp"
                android:fontFamily="@font/poppinsmedium"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:elevation="41dp">
            </soup.neumorphism.NeumorphButton>

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/foundObject"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:layout_below="@id/odd_shape"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="45dp"
            android:layout_marginTop="-40dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/shape_rectangle_21"
            android:backgroundTint="#E9C96E"
            android:drawableStart="@drawable/icon_box_stroke"
            android:paddingHorizontal="25dp"
            android:paddingVertical="20dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/reportFoundObject"
            android:textAllCaps="false"
            android:textColor="#1D4054"
            android:textStyle="bold">
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/lostObject"
            android:layout_width="268dp"
            android:layout_height="58dp"
            android:layout_below="@id/foundObject"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="45dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/shape_rectangle_21"
            android:backgroundTint="#384C85"
            android:drawableStart="@drawable/icon_lost"
            android:drawableTint="#F4CF65"
            android:fontFamily="@font/poppinsmedium"
            android:paddingHorizontal="25dp"
            android:paddingVertical="21dp"
            android:text="@string/reportLostObject"
            android:textAllCaps="false"
            android:textColor="#F4CF65"
            android:textStyle="bold">
        </androidx.appcompat.widget.AppCompatButton>
    </RelativeLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
       android:layout_gravity="center" />
</FrameLayout>